<resources>
    <string name="app_name">My Application Kotlin</string>
    <string name="empty" />
    <string name="myButton">MyButton</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="local">local</string>
    <string name="server">server</string>
    <string name="exit">exit</string>
    <string name="get">Получилось</string>
    <string name="have_not_any_lines">Have not any lines</string>
    <string name="history">history</string>
    <string name="airplane_mode_off">AIRPLANE_MODE Off</string>
    <string name="airplane_mode_on">AIRPLANE_MODE On</string>
    <string name="airplane_mode">android.intent.action.AIRPLANE_MODE</string>
    <string name="contacts">contacts</string>
</resources>