<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_local"
        android:icon="@drawable/ic_baseline_phonelink_local"
        android:title="@string/local"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_server"
        android:icon="@drawable/ic_baseline_phonelink_server"
        android:title="@string/server"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_baseline_close_app"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_baseline_history"
        android:title="@string/history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_baseline_contact_phone"
        android:title="@string/contacts"
        app:showAsAction="always" />

</menu>